# ChatYTT

./: .gitignore  .pre-commit-config.yaml  README.md  amplify.yml  pyproject.toml
chatyt/utils/: app.py  s3.py
chatyt/youtube_data/: playlist_data_loader.py
chatyt/youtube_data/lambda_handlers/: doac_video_ids.json  fetch_latest_video_transcripts.py  fetch_video_ids.py
chatytt/api/: main.py
chatytt/chains/: __init__.py  base_chain.py  debug.py  evalaute.py  qa_chain.py
chatytt/chains/custom/: __init__.py  conversational_qa_lcel_chain.py  conversational_qa_sequential_chain.py
chatytt/chains/standard/: conversational_qa_chain.py  qa_chain.py
chatytt/conf/: config.py  config.yaml
chatytt/embeddings/: pinecone_db.py  pre_processing.py  s3_json_document_loader.py
chatytt/llm/: model.py
chatytt/utils/: app.py  s3.py
chatytt/vector_store/: pinecone_db.py
chatytt/youtube_data/: data_models.py  playlist_data_loader.py  transcript_fetcher.py
chatytt/youtube_data/lambda_handlers/: fetch_latest_video_ids.py  (+1 more)
client/: amplify.yml  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  aws-exports.tsx
deploy/: Makefile  build.sh
deploy/chatytt-api/: template.yaml
deploy/chatytt-client/: template.yaml
deploy/chatytt-server/: samconfig.toml  template.yaml
deploy/chatytt-webapp/: samconfig.toml  template.yaml
deploy/chatytt-workflows/: samconfig.toml  template.yaml
docs/: .$architecture.drawio.bkp  .$architecture.drawio.dtmp  architecture.drawio
server/: app.py  lambda_handler.py  main.py
server/utils/: chat.py  dynamodb.py
(+13 files in other folders)
