[tool.poetry]
name = "chatyt"
version = "0.1.0"
description = "Using LLMs for question answering via youtube video transcripts as context."
authors = ["suresha97 <suresha@tcd.ie>"]

[tool.poetry.dependencies]
python = "^3.9"
youtube-data-api = "^0.0.21"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"
youtube-transcript-api = "^0.6.1"
boto3 = "^1.28.73"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.3"
mypy = "^1.6.1"
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
